--- a/src/index.html
+++ b/src/index.html
@@ -6,34 +6,17 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
   <body class="mat-typography">
     <app-root></app-root>
-    <!-- <script>
-      const increment = (function (n) {
-        return () => {
-          console.log(n++);
-        };
-      })(1);
-
-      increment();
-      increment();
-      increment();
-      increment();
-      increment();
-
-      const formatter = (number, maskingCount) => {
-        const maskSegment = Array.from({ length: Number(maskingCount) }).reduce(
-          (acc) => acc + "#",
-          ""
-        );
-        return number.toString().slice(0, -maskingCount) + maskSegment;
-      };
-
-      console.log(formatter("8910885430", "4"));
-    </script> -->
   </body>
 </html>
